# maps

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO  ast.cpp  ast.hh  build_and_run  build_compiler  build_compiler_and_run  compile_and_link  config.cpp  config.hh  example.test  ir_gen.cpp  ir_gen.hh  lexer.cpp  lexer.hh  main.cpp  output.cpp  output.hh  parser.cpp  parser.hh  parsing.cpp  parsing.hh  run_compiler  syntax_error.cpp  syntax_error.hh  testc.cpp  verify_main.cpp
corelib/: corelib.c  corelib.h  maps_builtins.mapsh
design/: AST.drawio  AST_classes.drawio  AST_venn.drawio  TODO and ideas  about_operators  design_problems  features  function-syntax-options  functions.maps  line_end_context_statements.maps  mapppings.maps  metainfo.maps  notes_on_implementation  open_questions  operators.maps  overloads.maps  philosophy  traits.maps  type_specifiers.maps  type_syntax.maps  unwrapping_optionals.maps  variables_and_primitives.maps
design/internals/: ast_nodes.md  parsing_layers.md
docs/: TODO.md  Type declarations.md  casting call expressions.md  casting rules.md  casting_call_expressions.md  dependencies.md  glossary.md  index.md  known issues.md  layer2 expression funkyness.md  mutability.md  package.json  pnpm-lock.yaml  urgent issues.md
docs/.vitepress/: config.mjs
docs/TODO/: LONG_TERM_TODO.md  SHORT_TERM_TODO.md  TODO.md
docs/design/: ast nodes.md  features.md  ideas.md  open questions.md  philosophy.md
docs/internals/: ast nodes.md  compilation pipeline.md  identifying types.md  parsing layers.md
docs/syntax and feature drafts/: functions.md  lambdas.md  line-end real-estate.md  mapppings.md  operators.md  overloads.md  traits.md  type oddities.md  type specifiers.md  type syntax.md  unwrapping optionals.md  variables and primitives.md
doctest/: doctest.h
libmaps/: libmaps.c  libmaps.h
maps_builtins/: maps_builtins.c  maps_builtins.h  maps_datatypes.h
practice/: binop_parse.hs
src/: 0.1 cleanup.md  ast.cpp  ast.hh  config.cpp  config.hh  ir_generator.cpp  ir_generator.hh  jit_manager.cpp  jit_manager.hh  lexer.cpp  lexer.hh  logging.cpp  logging.hh  main.cpp  mapsc_main.cpp  mapsc_verify_main.cpp  mapsci_main.cpp  output.cpp  parser.cpp  parser.hh  pragmas.hh  repl.cpp  repl.hh  reverse_parse.cpp  source.hh  verify_main.cpp  verify_mapsc_main.cpp
src/ast/: ast.cpp  ast.hh  ast_node.cpp  ast_node.hh  callable.cpp  callable.hh  scope.hh
src/common/: array_helpers.hh  deferred_bool.hh  maps_datatypes.h  std_visit_helper.hh  string_helpers.hh
src/ir/: ir_builtins.cpp  ir_builtins.hh  ir_generator.cpp  ir_generator.hh  ir_output.cpp  ir_output.hh  ir_types.cpp  ir_types.hh  obj_output.cpp  type_mapping.hh
src/lang/: ast.cpp  ast.hh  ast_node.cpp  ast_node.hh  builtins.cpp  builtins.hh  callable.cpp  casts.cpp  casts.hh  identifying_types  operator.hh  pragma.cpp  pragma.hh  pragmas.cpp  pragmas.hh  reverse_parse.cpp  reverse_parse.hh  scope.cpp  scope.hh  trait.hh  type.cpp  type.hh  type_defs.hh  types.cpp  types.hh  words.hh
src/mapsc/: builtins.cpp  builtins.hh  compilation_state.cpp  compilation_state.hh  compiler_option_defs.inc  compiler_options.cpp  compiler_options.hh  concretize.cpp  concretize.hh  default_option_defs.inc  inline.cpp  inline.hh  log_format.hh  logging.cpp  logging.hh  logging_options.hh  logging_types.hh  loglevel_defs.hh  name_resolution.cpp  name_resolution.hh  pragma.cpp  pragma.hh  process_source.cpp  process_source.hh  simplify.cpp  simplify.hh  source.cpp  source.hh  source_location.cpp  source_location.hh  transform_stage.cpp  transform_stage.hh  words.hh
src/mapsc/ast/: ast.cpp  ast.hh  ast_node.cpp  ast_node.hh  ast_node_visitor.hh  ast_store.cpp  ast_store.hh  builtin.cpp  builtin.hh  call_expression.cpp  call_expression.hh  callable.cpp  callable.hh  chunk.hh  definition.cpp  definition.hh  definition_body.cpp  definition_body.hh  expression.cpp  expression.hh  expression_properties.cpp  expression_properties.hh  external.cpp  external.hh  function_definition.cpp  function_definition.hh  identifier.cpp  identifier.hh  lambda.cpp  lambda.hh  layer2_expression.cpp  layer2_expression.hh  let_definition.cpp  let_definition.hh  (+14 more)
src/mapsci/: cl_options.cpp  cl_options.hh  init_llvm.cpp  init_llvm.hh  jit_manager.cpp  jit_manager.hh  repl.cpp  repl.hh  repl_commands.cpp  repl_compilation_pipeline.cpp
src/parser/: full_parse.cpp  full_parse.hh  lexer.cpp  name_resolution.cpp  name_resolution.hh  parser_layer1.cpp  parser_layer1.hh  parser_layer2.cpp  parser_layer2.hh  reverse_parse.cpp  reverse_parse.hh  token.cpp  token.hh  type_checking.cpp  type_declaration.cpp  type_declaration.hh  type_inference.cpp  type_inference.hh
src/parsing/: full_parse.cpp  full_parse.hh  lexer.cpp  lexer.hh  name_resolution.cpp  name_resolution.hh  parser_common.cpp  parser_layer1.cpp  parser_layer1.hh  parser_layer2.cpp  parser_layer2.hh  token.cpp  token.hh  tokens.cpp  tokens.hh  type_inference.cpp  type_inference.hh
test_inputs/: comments.test.in  hello_world.test.in  indents.test.in  names_and_literals.test.in  operator.test.in  operators.test.in  simple_script.test.in  syntax_errors.test.in  ties.test.in
tests/: ast.cpp  ast_tests.cpp  compiler_options.cpp  concretize.cpp  example.test.in  full_runs.cpp  function_casts.cpp  indents.test.in  indents.test.out  inline.cpp  ir_gen_tests.cpp  layer1.cpp  layer1_tests.hh  layer2.cpp  layer2_tests.cpp  logging.cpp  multiple_funcs.test.in  names_and_literals.test.in  operators.test.in  run_lit.py  simple_script.test.in  test_helpers.hh  tests_main.cpp  ties.test.in  type_casts.cpp  type_specifiers.cpp  types_tests.cpp
tests/ast/: ast.cpp
tests/dsir/: basics.cpp
tests/e2e/: e2e_tests.maps  filecheck_test.mapsci  lit.cfg.py  lit.site.cfg.py.in
tests/parser/: layer1.cpp  layer2.cpp  lexer.cpp  unary_minus.cpp  unary_operators.cpp
tests/procedures/: concretize.cpp  create_call.cpp  inline.cpp
tests/types/: function_type.cpp  type_casts.cpp  type_specifiers.cpp  type_store.cpp
tests/unit/: builtin.cpp  logging.cpp  pragmas.cpp
(+188 files in other folders)
